Fix issues reported by findbugs.